tests/paczka1/small_fuzzy/46157551.err
Error in line 1: sNYT5Nb A623 37,86
Error in line 7: sNYT5Nb A623 79,0
Error in line 12: IB5i4mD A970 3-,-
